--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,60 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>Temy Test Environment</title>
 </head>
 <body>
-    <h1>It works!</h1>
+    <div class="form">
+        <form name="form" method="POST">
+            <div class="form-div">
+                <label for="name">Name</label>
+                <input type="text" name="name" placeholder="Alexey Koval" pattern="[A-Za-z\s]+" required>
+            </div>
+            <div class="form-div">
+                <label for="email" class="required">Email</label>
+                <input type="email" name="email" placeholder="mail@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+            </div>
+            <div class="form-div">
+                <label for="country">Country</label>
+                <select name="country" class="country-select" required>
+                  <option value="" selected disabled hidden></option>
+                </select>
+            </div>
+            <div class="form-div">
+                <label for="state">State</label>
+                <select name="state" class="state-select" required>
+                  <option value="" selected disabled hidden></option>
+                </select>
+            </div>
+            <div class="form-div">
+                <label for="city">City</label>
+                <select name="city" class="city-select" required>
+                  <option value="" selected disabled hidden></option>
+                </select>
+            </div>
+            <div class="form-div">
+                <label for="phoneNum">Phone Number</label>
+                <input type="number" name="phoneNum" placeholder="3809512345" pattern="\d+" required>
+            </div>
+            <div class="form-div">
+                <label for="address">Address</label>
+                <input type="text" name="address" placeholder="Kovalenka, st. 14">
+            </div>
+            <div class="form-div">
+                <label for="about">About me</label>
+                <textarea name="about" placeholder="About" maxlength="500"></textarea>
+            </div>
+            <div class="form-div">
+                <label for="submit">Submit</label>
+                <input type="submit" class="button">
+            </div>
+
+        </form>
+    </div>
+    <div class="list"></div>
+    <script type="text/javascript" src="index.js"></script>
+
+    
 </body>
 </html>
