--- a/src/index.html
+++ b/src/index.html
@@ -5,58 +5,64 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <title>Temy Test Environment</title>
 </head>
 <body>
-    <div class="form">
-        <form name="form" method="POST">
-            <div class="form-div">
+    <div class="container">
+        <form name="form" class="d-none" method="POST">
+            <div class="form-group required">
                 <label for="name">Name</label>
-                <input type="text" name="name" placeholder="Alexey Koval" pattern="[A-Za-z\s]+" required>
+                <input type="text" class="form-control" name="name" placeholder="Alexey Koval" pattern="[A-Za-z\s]+" required>
             </div>
-            <div class="form-div">
-                <label for="email" class="required">Email</label>
-                <input type="email" name="email" placeholder="mail@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+            <div class="form-group required">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" name="email" placeholder="mail@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
             </div>
-            <div class="form-div">
+            <div class="form-group required">
                 <label for="country">Country</label>
-                <select name="country" class="country-select" required>
+                <select name="country" class="form-control country-select" required>
                   <option value="" selected disabled hidden></option>
                 </select>
             </div>
-            <div class="form-div">
+            <div class="form-group required">
                 <label for="state">State</label>
-                <select name="state" class="state-select" required>
+                <select name="state" class="form-control state-select" required>
                   <option value="" selected disabled hidden></option>
                 </select>
             </div>
-            <div class="form-div">
+            <div class="form-group required">
                 <label for="city">City</label>
-                <select name="city" class="city-select" required>
+                <select name="city" class="form-control city-select" required>
                   <option value="" selected disabled hidden></option>
                 </select>
             </div>
-            <div class="form-div">
+            <div class="form-group required">
                 <label for="phoneNum">Phone Number</label>
-                <input type="number" name="phoneNum" placeholder="3809512345" pattern="\d+" required>
+                <input type="number" class="form-control" name="phoneNum" placeholder="3809512345" pattern="\d+" required>
             </div>
-            <div class="form-div">
+            <div class="form-group">
                 <label for="address">Address</label>
-                <input type="text" name="address" placeholder="Kovalenka, st. 14">
+                <input type="text" class="form-control" name="address" placeholder="Address">
             </div>
-            <div class="form-div">
+            <div class="form-group">
                 <label for="about">About me</label>
-                <textarea name="about" placeholder="About" maxlength="500"></textarea>
+                <textarea name="about" class="form-control" placeholder="About" maxlength="500"></textarea>
             </div>
-            <div class="form-div">
-                <label for="submit">Submit</label>
-                <input type="submit" class="button">
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary" value="Submit">
             </div>
 
         </form>
+        <div class="reg-button">
+            <button class="btn btn-primary">Registration</button>
+        </div>
+        <div class="list-title">
+            <p>List of users</p>
+        </div>
+        <div class="list-group"></div>
     </div>
-    <div class="list"></div>
     <script type="text/javascript" src="index.js"></script>
 
     
