--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
         <form name="form" class="d-none" method="POST">
             <div class="form-group required">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" name="name" placeholder="Alexey Koval" pattern="[A-Za-z\s]+" required>
+                <input type="text" class="form-control" id="validationCustom01" name="name" placeholder="Alexey Koval" pattern="[A-Za-z\s]+" required>
             </div>
             <div class="form-group required">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" name="email" placeholder="mail@mail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+                <input type="email" class="form-control" name="email" placeholder="mail@mail.com" pattern="[a-z0-9]+@[a-z0-9]+\.[a-z]{2,}$" required>
             </div>
             <div class="form-group required">
                 <label for="country">Country</label>
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group required">
                 <label for="phoneNum">Phone Number</label>
-                <input type="number" class="form-control" name="phoneNum" placeholder="3809512345" pattern="\d+" required>
+                <input type="text" class="form-control" pattern="\d*" name="phoneNum" placeholder="3809512345" pattern="\d+" required>
             </div>
             <div class="form-group">
                 <label for="address">Address</label>
